--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "setup": "./scripts/setup.sh"
     },
     "author": "",
-    "license": "ISC",
+    "license": "See LICENCE file",
     "dependencies": {
         "@babel/core": "7.10.4",
         "@babel/plugin-transform-runtime": "7.10.4",
