--- a/package.json
+++ b/package.json
@@ -53,7 +53,14 @@
         "y-monaco": "0.0.1",
         "y-protocols": "1.0.0",
         "y-websocket": "1.3.1",
-        "yjs": "13.3.0"
+        "yjs": "13.3.0",
+        "less": "3.12.2",
+        "autoprefixer": "9.8.6",
+        "concurrently": "5.2.0",
+        "play-sound": "1.1.3",
+        "eslint": "7.6.0",
+        "eslint-config-prettier": "6.11.0",
+        "eslint-plugin-prettier": "3.1.4"
     },
     "babel": {
         "presets": [
@@ -67,14 +74,5 @@
         ">0.25%",
         "ie 11",
         "not op_mini all"
-    ],
-    "devDependencies": {
-        "less": "3.12.2",
-        "autoprefixer": "9.8.6",
-        "concurrently": "5.2.0",
-        "play-sound": "1.1.3",
-        "eslint": "7.6.0",
-        "eslint-config-prettier": "6.11.0",
-        "eslint-plugin-prettier": "3.1.4"
-    }
+    ]
 }
